@@ -5,6 +5,7 @@ ostree (2017.7-1) UNRELEASED; urgency=medium
     - Use https URL for copyright-format
   * debian/dist/: Add ostree-trivial-httpd.xml, which was incorrectly
     excluded from the upstream release
+  * Implement <nodoc> build profile
 
  -- Simon McVittie <smcv@debian.org>  Wed, 21 Jun 2017 10:07:42 +0100
 
